Update about me

--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
               <div class="content-text">
                 <img class="profile-pic" src="img/pfpic.jpg">
                 <p>
-                  Hello! I'm a <b>software engineer</b> and a recent graduate from Dev Bootcamp. Before becoming enveloped in the world of programming, I graduated from UC San Diego with a B.S. in Human Biology. I loved the <b>fast-paced</b> atmosphere of the health care industry selflessly focused on <b>helping out</b> others.
+                  Hello! I'm a <b>software developer</b> and a recent graduate from Dev Bootcamp. Before becoming enveloped in the world of programming, I graduated from UC San Diego with a B.S. in Human Biology. I loved the <b>fast-paced</b> atmosphere of the health care industry selflessly focused on the needs of others.
                 </p>
                 <p>
-                  Near the end of my undergraduate career, I began to feel that the idea of being a doctor was mundane. Hearing my worries, a friend nudged me towards computer science. My first introductory course to C++ made me realize the <b>exhilarating and endless possibilities</b> of programming. With how quick the technology industry is expanding today, there are so many new technologies to learn and problems to solve. Coding provides the perfect opportunity to build something providing a great UX and towards making a difference.
+                  Near the end of my undergraduate career, I began to feel that the idea of being a doctor was a little mundane and didn't allow for much change. Hearing my worries, a friend nudged me towards computer science. My first introductory course to C++ made me realize the <b>exhilarating and endless possibilities</b> of programming. With how quick the technology industry is expanding, there are always new technologies to learn and different issues to tackle. Coding provides the perfect opportunity to build something <b>unique and unexplored</b>.
                 </p>
                 <p>
-                  When I'm not coding, I enjoy taking walks, spending time with friends, and eating new and different foods. Feel free to contact me about anything!
+                  When I'm not coding, I enjoy taking walks, chilling with friends, and eating and exploring different foods. Please contact me if you'd like to talk about anything.
                 </p>
               </div>
 
